--- a/smartData/frontEnd/templates/index.html
+++ b/smartData/frontEnd/templates/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>js代码（www.jsdaima.com）</title>
+	<title>smartData</title>
 
 
 	<!-- Global stylesheets -->
@@ -35,7 +35,7 @@
 
 	<script type="text/javascript" src="/static/assets/js/core/app.js"></script>
 	<script type="text/javascript" src="/static/assets/js/pages/sidebar_dual.js"></script>
-<!--	<script type="text/javascript" src="/static/echarts/dist/echarts.js"></script>-->
+	<script type="text/javascript" src="/static/echarts/dist/echarts.min.js"></script>
 <!--	<script type="text/javascript" src="/static/assets/js/charts/echarts/test.js"></script>-->
 
 	<!--script type="text/javascript" src="https://www.jq22.com/jquery/jquery-1.10.2.js"></script-->
@@ -45,12 +45,12 @@
 	<!-- /theme JS files -->
 
 	<!-- temp add start -->
-	<script type="text/javascript" src="/static/assets/js/charts/echarts/test2.js"></script>
-	<script type="text/javascript" src="/static/assets/js/plugins/visualization/echarts/echarts.js"></script>
+<!--	<script type="text/javascript" src="/static/assets/js/charts/echarts/test2.js"></script>-->
+<!--	<script type="text/javascript" src="/static/assets/js/plugins/visualization/echarts/echarts.js"></script>-->
 <!--	<script type="text/javascript" src="static/assets/js/plugins/visualization/echarts/theme/smartDataCandlestickTheme.js"></script>-->
 	<!-- temp add end-->
 
-	<link rel="StyleSheet" href="/static/dtree/dtree.css" type="text/css" />
+<!--	<link rel="StyleSheet" href="/static/dtree/dtree.css" type="text/css" />-->
     <script type="text/javascript" src="/static/dtree/dtree.js"></script>
 
 </head>
@@ -1009,16 +1009,20 @@
 													<span class="help-block">End Date</span>
 												</div>
 
-												<div class="col-md-3">
+												<div class="col-md-2">
 													<div class="form-group has-feedback">
-														<input id="stockCode" type="text" class="form-control" placeholder="Stock Code">
+														<input id="stockCode" type="text" class="form-control" list="stockCodeList" placeholder="Stock Code" onchange="addCode()" onfocus=this.value=''>
+															<datalist id="stockCodeList" style="display:none;" >
+															   <option value="300059.SZ">东方财富</option>
+															   <option value="600519.SH">贵州茅台</option>
+														   </datalist>
 														<div class="form-control-feedback">
 															<i class="icon-search4 text-size-base"></i>
 														</div>
 													</div>
 												</div>
 
-												<div class="col-md-3">
+												<div class="col-md-2">
 													<div class="form-group has-feedback">
 														<input id="indexCode" type="text" class="form-control" placeholder="Index Code">
 														<div class="form-control-feedback">
@@ -1026,6 +1030,11 @@
 														</div>
 													</div>
 												</div>
+
+												<div class="col-md-2">
+													<button type="button" class="btn btn-default" id="analyse">Analyse</button>
+												</div>
+
 											</div>
 										</div>
 									</div>
@@ -1039,14 +1048,6 @@
 											<div class="panel panel-flat">
 												<div class="panel-heading">
 													<h5 class="panel-title">Candlestick with line</h5>
-													<div class="heading-elements">
-														<ul class="icons-list">
-															<li><a data-action="collapse"></a></li>
-															<li><a data-action="reload"></a></li>
-															<li><a data-action="close"></a></li>
-														</ul>
-													</div>
-
 													<div class="panel-body">
 														<div class="chart-container">
 															<div class="chart has-fixed-height" id="candlestick_line"></div>
@@ -1089,20 +1090,20 @@
 							//d.add(NodeId, FatherId, Checkbox Name, Checkbox Value, Checkbox Dispaly Name,
 							//      true/false:Checkbox不可选/可选, true/flase:Checkbox默认选中/没选中
 							d.add(0, -1, 'Compare Multi selection');
-							d.add(1, 0, 'authority', '0001', '宏观数据', true, false);
-							d.add(2, 1, 'authority', '0002', 'GDP', false, false);
-							d.add(3, 1, 'authority', '0003', '货币供应量', false, false);
-							d.add(4, 1, 'authority', '0004', 'CPI', false, false);
-							d.add(5, 1, 'authority', '0005', 'LPR贷款基础利率', false, false);
+							d.add(1, 0, 'MacroParams', 'macro', '宏观数据', true, false);
+							d.add(2, 1, 'MacroParams', 'macroGdp', 'GDP', false, false);
+							d.add(3, 1, 'MacroParams', 'macroMondySupply', '货币供应量', false, false);
+							d.add(4, 1, 'MacroParams', 'macroCPI', 'CPI', false, false);
+							d.add(5, 1, 'MacroParams', 'macroLPR', 'LPR贷款基础利率', false, false);
 
-							d.add(6, 0, 'authority', '0006', '个股数据', true, false);
-							d.add(7, 6, 'authority', '0007', 'PE TTM', false, false);
-							d.add(8, 6, 'authority', '0008', 'ROE', false, false);
-							d.add(9, 6, 'authority', '0009', '主营业收入增长率', false, false);
-							d.add(10, 6, 'authority', '0010', '毛利率', false, false);
-							d.add(11, 6, 'authority', '0011', '扣非净利率', false, false);
-							d.add(12, 6, 'authority', '0012', '负债率', false, false);
-							d.add(13, 6, 'authority', '0013', '周转率', false, false);
+							d.add(6, 0, 'StockParams', '0006', '个股数据', true, false);
+							d.add(7, 6, 'StockParams', '0007', 'PE TTM', false, false);
+							d.add(8, 6, 'StockParams', '0008', 'ROE', false, false);
+							d.add(9, 6, 'StockParams', '0009', '主营业收入增长率', false, false);
+							d.add(10, 6, 'StockParams', '0010', '毛利率', false, false);
+							d.add(11, 6, 'StockParams', '0011', '扣非净利率', false, false);
+							d.add(12, 6, 'StockParams', '0012', '负债率', false, false);
+							d.add(13, 6, 'StockParams', '0013', '周转率', false, false);
 
 							document.write(d);
 							d.openAll();
@@ -1134,6 +1135,256 @@
 
 	</div>
 	<!-- /page container -->
+
+	<script type="text/javascript">
+       var indexCodes=[];
+       var stockCodes=[];
+       var macroParams=[];
+       var stockParams=[];
+        $(document).ready(function () {
+            var time = new Date();
+            var day = ("0" + time.getDate()).slice(-2);
+            var month = ("0" + (time.getMonth() + 1)).slice(-2);
+            var lastYear = time.getFullYear()-1 + "-" + (month) + "-" + (day);
+            $('#startDate').val(lastYear);
+
+            var today = time.getFullYear() + "-" + (month) + "-" + (day);
+            $('#endDate').val(today);
+        });
+
+        Array.prototype.indexOf = function(val) {
+            for (var i = 0; i < this.length; i++) {
+            if (this[i] == val) return i;
+            }
+        return -1;
+        };
+
+        Array.prototype.remove = function(val) {
+            var index = this.indexOf(val);
+            if (index > -1) {
+            this.splice(index, 1);
+            }
+        };
+
+        function removeCode(obj){
+            stockCodes.remove(obj.id);
+            $(obj).remove();
+	    };
+
+	    function addCode()
+	    {
+                var stockCode=$("#stockCode").val().trim();
+                var stockText=stockCode;
+                var isInCodeList=0;
+                var $options=$("#stockCodeList").children();
+                for(var i=0;i<$options.length;i++){
+                    if($options.eq(i).val().trim()==$("#stockCode").val().trim())
+                    {
+                        stockText=$options.eq(i).text();
+                        break;
+                    }
+                }
+                //selectedItem='<dd onClick="removeCode(this)" id="'+ stockCode + '"><a href="#">'+stockText+'</a></dd>';
+                //$(".select-result dl").append(selectedItem);
+                stockCodes.push(stockCode);
+        }
+
+        function removeIndexCode(obj){
+            indexCodes.remove(obj.id);
+            $(obj).remove();
+	    };
+
+	    function addIndexCode()
+	    {
+                var indexCode=$("#indexCode").val().trim();
+                var indexText=indexCode;
+                var isInCodeList=0;
+                var $options=$("#indexCodeList").children();
+                for(var i=0;i<$options.length;i++){
+                    if($options.eq(i).val().trim()==$("#indexCode").val().trim())
+                    {
+                        indexText=$options.eq(i).text();
+                        break;
+                    }
+                }
+                selectedItem='<dd onClick="removeIndexCode(this)" id="'+ indexCode + '"><a href="#">'+indexText+'</a></dd>';
+                $(".select-result dl").append(selectedItem);
+                indexCodes.push(indexCode);
+            }
+
+		function getMacroParams()
+		{
+			var params=[];
+			var checkBoxObj = document.all.MacroParams;
+
+			for (i = 0; i < checkBoxObj.length; i++) {
+				if (checkBoxObj[i].checked) {
+					params.push(checkBoxObj[i].value);
+				}
+			}
+			return params;
+
+		}
+
+	   function getStockParams()
+		{
+			var params=[];
+			var checkBoxObj = document.all.StockParams;
+
+			for (i = 0; i < checkBoxObj.length; i++) {
+				if (checkBoxObj[i].checked) {
+					params.push(checkBoxObj[i].value);
+				}
+			}
+			return params;
+		}
+
+
+        // // function getStockParams()
+        // {
+        //     var params=[];
+        //     if($('#stockGrowthRateOfMainOperatingIncome').is(':checked'))
+        //     {
+        //         params.push("stockGrowthRateOfMainOperatingIncome");
+        //     }
+        //     if($('#stockGrossMargin').is(':checked'))
+        //     {
+        //         params.push("stockGrossMargin");
+        //     }
+        //     if($('#stockNetInterestRate').is(':checked'))
+        //     {
+        //         params.push("stockNetInterestRate");
+        //     }
+        //     if($('#stockDebtRatio').is(':checked'))
+        //     {
+        //         params.push("stockDebtRatio");
+        //     }
+        //     if($('#stockTurnOverRate').is(':checked'))
+        //     {
+        //         params.push("stockTurnOverRate");
+        //     }
+        //     return params;
+        // }
+   </script>
+
+	<script type="module">
+	   // import {attachStockData, setXAxisData, calculateMA, splitDataByType, splitData, option} from '/static/js/smartDataCandlesticks.js';
+		import * as smartDataCandlesticks from '../static/js/smartDataCandlesticks.js';
+		var dom = document.getElementById("candlestick_line");
+		var myChart = echarts.init(dom);
+		var app = {};
+		var option = smartDataCandlesticks.option;
+		var upColor = '#66BB6A';
+		var downColor = '#FF7043';
+		var upColorBorder = upColor;
+		var downColorBorder = downColor;
+
+		var codeData = smartDataCandlesticks.splitDataByType({{ stockData }},false);
+		smartDataCandlesticks.setXAxisData(option, codeData.categoryData);
+		smartDataCandlesticks.attachStockData(option, "上证指数", codeData);
+
+		myChart.setOption(option, true);
+
+		myChart.dispatchAction({
+			type: 'brush',
+			areas: [
+				{
+					brushType: 'lineX',
+					coordRange: ['2018-06-02', '2018-07-20'],
+					xAxisIndex: 0
+				}
+			]
+		});
+
+		////////////////////////////////////////////////////////////////////////////////////
+		if (option && typeof option === "object") {
+			myChart.setOption(option, true);
+		}
+
+
+		 var stockData;
+		$('#analyse').click(function () {
+			var reg = new RegExp("-","g");
+			var startDate= $('#startDate').val().replace(reg,"");
+			var endDate= $('#endDate').val().replace(reg,"");
+			macroParams = getMacroParams();
+			stockParams = getStockParams();
+			alert(macroParams);
+			$.ajax({
+					url: '',
+					type: 'post',
+					traditional: true,
+					data: {'indexCodes': indexCodes,'stockCodes': stockCodes,'startDate': startDate, 'endDate': endDate, 'macroParams': macroParams, 'stockParams':stockParams},
+					success: function (response)
+					{
+						var numOfCodes = (response.indexCodes.length + response.stockCodes.length);
+						var isMultiCodes = (numOfCodes>1);
+						var haveBasicData = false;
+						var xAxisData = [];
+
+						smartDataCandlesticks.resetSeriesData(option);//Çå¿ÕÊý¾Ý
+						///////////////////// attach index data ////////////////////////////////////////////
+						if(isMultiCodes)
+						{
+						option.yAxis[0].axisLabel.formatter='{value} %';
+						}
+						else
+						{
+						option.yAxis[0].axisLabel.formatter='{value}';
+						}
+
+						for(var index=0; index < response.indexCodes.length; index++)
+						{
+							var indexCode = response.indexCodes[index];
+							var codeData = smartDataCandlesticks.splitDataByType(response.indexTradingDatas[indexCode], isMultiCodes);
+
+							if(false == haveBasicData)
+							 {  //Èç¹û»¹Ã»ÓÐ»­Ïß(Ã»ÓÐÌí¼ÓÈÎºÎÊý¾Ý)£¬ÔòÉèÖÃÒ»ÏÂxÖáµÄÊ±¼äÊý¾Ý
+								haveBasicData=true;
+								smartDataCandlesticks.setXAxisData(option, codeData.categoryData);
+							 }
+							 if(isMultiCodes)
+							 {  //Èç¹ûÓÐ(¹ÉÆ±+Ö¸Êý)ÓÐ¶à¸ö£¬Ôò²»ÓÃÀ¯ÖòÍ¼£¬¶øÓÃÆÕÍ¨µÄÕÛÏß»­
+								smartDataCandlesticks.attachStockLineData(option, indexCode, codeData.values, index);
+							 }
+							 else
+							 {
+								//Èç¹ûÖ»ÓÐÒ»¸ö¹ÉÆ±ºÍÖ¸ÊýÏà¼ÓÖ»ÓÐÒ»¸ö£¬ÔòÓÃÀ¯ÖòÍ¼
+								smartDataCandlesticks.attachStockData(option, indexCode, codeData);
+							 }
+						}
+						 ///////////////////// attach stock data ////////////////////////////////////////////
+						for(var index=0; index < response.stockCodes.length; index++)
+						{
+							var stockCode = response.stockCodes[index];
+							var codeData=smartDataCandlesticks.splitDataByType(response.tradingDatas[stockCode], isMultiCodes);
+							if(false == haveBasicData)
+							 {
+								haveBasicData=true;
+								smartDataCandlesticks.setXAxisData(option, codeData.categoryData);
+							 }
+							if(isMultiCodes)
+							{
+								smartDataCandlesticks.attachStockLineData(option, stockCode, codeData.values,(index+response.indexCodes.length) );
+							 }
+							 else
+							 {
+								smartDataCandlesticks.attachStockData(option, stockCode, codeData);
+							 }
+						}
+
+						///////////////////// attach macro data ////////////////////////////////////////////
+						for(var macroDataIndex=0; macroDataIndex < response.macroParams.length; macroDataIndex++)
+						{
+							var macroDataType = response.macroParams[macroDataIndex];
+							smartDataCandlesticks.attachLineData(option, macroDataType, option.xAxis[0].data, response.macroDatas[macroDataType], (response.macroParams.length<2));
+						}
+
+						myChart.setOption(option, true);
+					}
+			})
+		})
+	</script>
 
 </body>
 </html>
